[package]
name = "guaiguai-claude"
version = "0.1.1"
edition = "2021"
description = "乖乖Claude — 三炷香催 Claude Code 加速"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/guaiguai-claude"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

# macOS: use osascript via std::process::Command (no extra dep)
# Windows: keyboard simulation
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
